un commit el dia 29.11.25

--- a/Ejercicio-04/Index.html
+++ b/Ejercicio-04/Index.html
@@ -3,12 +3,14 @@
   <head lang="es">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 1</title>
+    <title>Ejercicio 4</title>
     <script type="text/javascript" src="JS.js" defer></script>
   </head>
   <body>
-    <h1>Ejercicio 1.</h1>
-    <p>Vamos a empezar con un sencillo ejercicio para practicar con el método prompt para pedir datos por teclado el condicional if</p>
-    <p>Pide la edad y si es mayor de 18 años indica que ya puede conducir.</p>
+    <h1>Ejercicio 4.</h1>
+    <p></p>
+    <p></p>
+    <p></p>
+    <div id="texto"></div>
   </body>
 </html>
