--- a/Ejercicio-04/Index.html
+++ b/Ejercicio-04/Index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1>Ejercicio 4.</h1>
-    <p></p>
-    <p></p>
+    <p>En el siguiente ejercicio vamos a practicar el bucle do while, una validación de números sencilla y la operación de suma</p>
+    <p><b>Realiza un script que pida números hasta que se pulse “cancelar”. Si no es un número deberá indicarse con un «alert» y seguir pidiendo. Al salir con “cancelar” deberá indicarse la suma total de los números introducidos.</b></p>
     <p></p>
     <div id="texto"></div>
   </body>
